<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity">

    <TextView
        android:id="@+id/addTaskTitle"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="44dp"
        android:text="@string/add_task_text_view"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextBoxTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextBoxTaskTitle"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/add_task_task_title_text_box"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextBoxTaskDescription"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/add_task_task_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBoxTaskTitle"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addTaskButtonPageTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="@string/add_task_add_task_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/submittedTextViewPageTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskButtonPageTwo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskTitleAboveTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/add_task_task_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextBoxTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="2dp"
        android:text="@string/add_task_task_description_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextBoxTaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBoxTaskTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/AddTaskEnumSpinner"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBoxTaskDescription" />

    <Spinner
        android:id="@+id/AddTaskTeamSpinner"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskEnumSpinner" />

    <ImageView
        android:id="@+id/AddTaskActivityImageSelection"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amplify_storage_transfer_notification_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>