...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <TextView
        android:id="@+id/taskDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="TextView"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/taskDetailTextView"
        android:layout_width="316dp"
        android:layout_height="268dp"
        android:layout_marginTop="52dp"
        android:text="Lorem ipsum dolor sit amet. Et beatae rerum cum dolor consectetur ex cupiditate sapiente qui adipisci rerum et quos quia quo galisum repellat! Non explicabo vero sed error odit et tempore assumenda sit cupiditate neque qui consequatur ipsa et debitis esse eum tenetur tempora? Ad sunt ipsa cum veritatis animi in nobis harum."
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
