<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TaskListFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/taskFragmentTextView"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/blank_task_name"
        android:textColor="#F4F4F4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
